# fraud-detection-demo

./: .gitignore  Fraud_Detection_Demo.py  Introduction.py  Pipfile  README.md  pyproject.toml
lib/: dataframe_graph.py  queries.py  snowpark.py  sql.py  sql_query.py  util.py
old-pages/: graph-structure.py
pages/: 1_The_Data.py  1_The_Dataset.py  2_Graph_Structure.py  2_Simple_Features.py  3_Feature_Engineering.py  3_Graph_Analysis.py  3_Snowflake-RAI Integration.py  4_Graph_Analysis.py  4_Results.py  4_Snowflake-RAI Integration.py  5_Example.py  Introduction.py
src/fraud_detection_demo/: __init__.py
