[project]
name = "fraud-detection-demo"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Samuel S. Watson", email = "samuel.s.watson@gmail.com" }
]
dependencies = ["streamlit~=1.22.0"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
